--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!-- intro -->
         <section id="home" class="d-flex flex-column justify-content-center" style="padding-bottom:0px; padding-top:0px">
-            <div class="container" style="margin-left:15%; margin-right:15%; width:70%;">
+            <div class="container" style="">
                 <div class="row" style="margin-bottom:20px">
                     <div class="col position-relative" style="height:100vh;">
                         <div class="card no-border position-absolute top-50 start-50 translate-middle" style="width:100%">
@@ -103,10 +103,10 @@
                 </div>
                 <div class="row">
                     <div class="col" style="text-align:center">
-                        <div class="row row-cols-1 row-cols-md-3 g-4" align="center" style="padding-left:100px; padding-right:100px">
+                        <div class="row row-cols-1 row-cols-md-3 g-4" align="center" style="padding-left:50px; padding-right:50px">
                             <div class="col">
                                 <div class="card h-100 product-box" style="text-align:left">
-                                    <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px">
+                                    <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
                                     <a href="#dhandhanggula_node" target="_blank" style="text-decoration:none; color:#000000">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
 
@@ -121,7 +121,7 @@
                             </div>
                             <div class="col">
                                 <div class="card h-100 product-box" style="text-align:left">
-                                    <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px">
+                                    <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
                                     <a href="#dhandhanggula_gateway" target="_blank" style="text-decoration:none; color:#000000">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
                                         <p class="card-title" style="font-size:16px"><Strong>Dhandhanggula Gateway</Strong></p>
@@ -134,7 +134,7 @@
                             </div>
                             <div class="col">
                                 <div class="card h-100 product-box" style="text-align:left">
-                                    <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px">
+                                    <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
                                     <a href="#dhandhanggula_unique" target="_blank" style="text-decoration:none; color:#000000">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
                                         <p class="card-title" style="font-size:16px"><Strong>Dhandhanggula Unique</Strong></p>
