--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                                     <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
                                     <a href="#dhandhanggula_unique" target="_blank" style="text-decoration:none; color:#000000">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
-                                        <p class="card-title" style="font-size:16px"><Strong>Dhandhanggula Unique</Strong></p>
-                                        <p style="font-size:12px">Unique serial character for both node and gateway as communication address.</p>
+                                        <p class="card-title" style="font-size:16px"><Strong>Dhandhanggula Security</Strong></p>
+                                        <p style="font-size:12px">Security for both node and gateway. Implemented in Arduino and Julia</p>
                                         <br>
                                         <a class="btn btn-danger secondary-btn" href="#dhandhanggula_unique" role="button">Start</a>
                                     </div>
