--- a/index.html
+++ b/index.html
@@ -103,35 +103,46 @@
                 </div>
                 <div class="row">
                     <div class="col" style="text-align:center">
-                        <div class="row row-cols-1 row-cols-md-3 g-4" align="center" style="padding-left:50px; padding-right:50px">
+                        <div class="row row-cols-1 row-cols-md-2 g-4" align="center" style="padding-left:50px; padding-right:50px">
+                            
                             <div class="col">
-                                <div class="card h-100 product-box" style="text-align:left">
+                                <div class="card h-100 product-box" style="text-align:left; padding-left:20px; padding-right:20px">
                                     <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
-                                    <a href="#dhandhanggula_node" target="_blank" style="text-decoration:none; color:#000000">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
-
                                         <p class="card-title" style="font-size:16px"><Strong>Dhandhanggula Node</Strong></p>
-                                        <p style="font-size:12px">Node module to send sensor's data and message repeater. Implemented in Arduino and Python.</p>
-                                        
+                                        <p style="font-size:12px">Node module to send sensor's data and message repeater. Implemented in Arduino.</p>
                                         <br>
-                                        <a class="btn btn-danger secondary-btn" href="#dhandhanggula_node" role="button">Start</a>
+                                        <div class="row">
+                                            <div class="col">
+                                                <a class="btn btn-danger secondary-btn" href="#dhandhanggula_node" role="button">Product</a>
+                                            </div>
+                                            <div class="col" align="right">
+                                                <box-icon type='logo' name='c-plus-plus'></box-icon>
+                                            </div>
+                                        </div>
                                     </div>
-                                    </a>
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="card h-100 product-box" style="text-align:left">
+                                <div class="card h-100 product-box" style="text-align:left;padding-left:20px; padding-right:20px">
                                     <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
-                                    <a href="#dhandhanggula_gateway" target="_blank" style="text-decoration:none; color:#000000">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
                                         <p class="card-title" style="font-size:16px"><Strong>Dhandhanggula Gateway</Strong></p>
-                                        <p style="font-size:12px">Receive sensor's data and send to your cloud storage written in Python.</p>
+                                        <p style="font-size:12px">Receive end-node data and send to your cloud storage written in Python.</p>
                                         <br>
-                                        <a class="btn btn-danger secondary-btn" href="#dhandhanggula_gateway" role="button">Start</a>
+                                        <div class="row">
+                                            <div class="col">
+                                                <a class="btn btn-danger secondary-btn" href="#dhandhanggula_node" role="button">Product</a>
+                                            </div>
+                                            <div class="col" align="right">
+                                                <box-icon type='logo' name='c-plus-plus'></box-icon><box-icon type='logo' name='python'></box-icon>
+                                            </div>
+                                        </div>                                    
                                     </div>
-                                    </a>
                                 </div>
                             </div>
+
+                            <!--
                             <div class="col">
                                 <div class="card h-100 product-box" style="text-align:left">
                                     <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
@@ -145,6 +156,8 @@
                                     </a>
                                 </div>
                             </div>
+                            -->
+
                         </div>
                     </div>
                 </div>
@@ -164,7 +177,7 @@
                                     <br>
                                     <p>
                                         Long range (LoRa) is an wireless RF technology which has an ability for sending amount of data in long communication range. 
-                                        Dhandhanggula network have enhanced LoRa ability to keep going well in high density area. 
+                                        Dhandhanggula network have enhanced LoRa ability to keep going well in high density area by using mesh network topology. 
                                     </p>
                                     </div>
                                     <div class="col-lg-7" style="text-align:center">
@@ -185,11 +198,12 @@
                                         <img src="./assets/img/02.jpg" style="height:400px; width:100%; object-fit:contain; text-align:center">
                                     </div>
                                     <div class="col-lg-5">
-                                    <h3><b>Dhandhanggula network is an open network</b></h3>
+                                    <h3><b>Dhandhanggula network is an open network and empowered by community</b></h3>
                                     <br>
                                     <p>
                                         New node can join easily to an existing dhandhanggula network in a area. 
-                                        With new node join, it increase the network coverage.
+                                        With new node join, it increase the network coverage. 
+                                        The network is fully maintained by the community in the area.
                                     </p>
                                     </div>
                                 </div>
@@ -204,12 +218,11 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-lg-5">
-                                    <h3><b>Security is number one</b></h3>
+                                    <h3><b>Your data is secured by end-to-end encryption</b></h3>
                                     <br>
                                     <p>
-                                        Dhandhanggula network using end-to-end encryption to make sure every data passing through the network is secure.
-                                        Your data is your treaseure.
-
+                                        Dhandhanggula network using AES encryption to make sure every data passing through the network is secure.
+                                        We also working in another encryption algorithm to work in microcontroller ecosystem. 
                                     </p>
                                     </div>
                                     <div class="col-lg-7" style="text-align:center">
@@ -231,7 +244,8 @@
             <div class="container" style="align-center">
                 <div class="row" style="text-align:center;">
                     <div class="col">
-                        <p class="text-white" style="font-size:10px"><Strong>Dhandhanggula Network @2022</Strong></p>
+                        <p class="text-white" style="font-size:10px"><Strong>Dhandhanggula Network @2022</Strong>
+                        Illustration by <a href="https://www.freepik.com/author/stories">storyset</a></p>
                     </div>
                 </div>
             </div>
@@ -240,5 +254,6 @@
         <!-- Javascript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.8/typed.min.js"></script>
+         <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
     </body>
 </html>
