--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-        <title>Dhandhanggula Network</title>
+        <title>Kawung Network</title>
         <link rel="icon" href="./assets/img/logo.png">
-        <meta content="Official Website of Dhandhanggula Network - an open source organization for IoT network and security" name="description">
-        <meta content="dhandhanggula, network, iot, security, lora, arduino, raspberry" name="keywords">
+        <meta content="Official Website of Kawung Network - an open source organization for IoT network and security" name="description">
+        <meta content="kawung, network, iot, security, lora, arduino, raspberry" name="keywords">
 
         <!-- CSS -->
         <link href="./assets/css/main.css" rel="stylesheet">
@@ -76,7 +76,7 @@
                                         </h1>
                                     </div>
                                     <h4 style="padding-top:30px">
-                                        Dhandhanggula network is an open source long range (LoRa) mesh network with secure connection.
+                                        Kawung network is an open source long range (LoRa) mesh network with secure connection.
                                         We provide an easy to use connection between new node and existing mesh network.
                                     </h4>
                                 </div>
@@ -109,12 +109,12 @@
                                 <div class="card h-100 product-box" style="text-align:left; padding-left:20px; padding-right:20px">
                                     <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
-                                        <p class="card-title" style="font-size:16px"><Strong>Dhandhanggula Node</Strong></p>
+                                        <p class="card-title" style="font-size:16px"><Strong>Kawung Node</Strong></p>
                                         <p style="font-size:12px">Node module to send sensor's data and message repeater. Implemented in Arduino.</p>
                                         <br>
                                         <div class="row">
                                             <div class="col">
-                                                <a class="btn btn-danger secondary-btn" href="#dhandhanggula_node" role="button">Product</a>
+                                                <a class="btn btn-danger secondary-btn" href="#kawung_node" role="button">Product</a>
                                             </div>
                                             <div class="col" align="right">
                                                 <box-icon type='logo' name='c-plus-plus'></box-icon>
@@ -127,12 +127,12 @@
                                 <div class="card h-100 product-box" style="text-align:left;padding-left:20px; padding-right:20px">
                                     <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
-                                        <p class="card-title" style="font-size:16px"><Strong>Dhandhanggula Gateway</Strong></p>
+                                        <p class="card-title" style="font-size:16px"><Strong>Kawung Gateway</Strong></p>
                                         <p style="font-size:12px">Receive end-node data and send to your cloud storage written in Python.</p>
                                         <br>
                                         <div class="row">
                                             <div class="col">
-                                                <a class="btn btn-danger secondary-btn" href="#dhandhanggula_node" role="button">Product</a>
+                                                <a class="btn btn-danger secondary-btn" href="#kawung_node" role="button">Product</a>
                                             </div>
                                             <div class="col" align="right">
                                                 <box-icon type='logo' name='c-plus-plus'></box-icon><box-icon type='logo' name='python'></box-icon>
@@ -146,12 +146,12 @@
                             <div class="col">
                                 <div class="card h-100 product-box" style="text-align:left">
                                     <img src="./assets/img/logo.png" style="height:100px; width:100%; object-fit:contain; text-align:center; margin-top:50px; padding-left:20px; padding-right:20px;">
-                                    <a href="#dhandhanggula_unique" target="_blank" style="text-decoration:none; color:#000000">
+                                    <a href="#kawung_unique" target="_blank" style="text-decoration:none; color:#000000">
                                     <div class="card-body" style="padding-top:50px; padding-bottom:50px;">
-                                        <p class="card-title" style="font-size:16px"><Strong>Dhandhanggula Security</Strong></p>
+                                        <p class="card-title" style="font-size:16px"><Strong>Kawung Security</Strong></p>
                                         <p style="font-size:12px">Security for both node and gateway. Implemented in Arduino and Julia</p>
                                         <br>
-                                        <a class="btn btn-danger secondary-btn" href="#dhandhanggula_unique" role="button">Start</a>
+                                        <a class="btn btn-danger secondary-btn" href="#kawung_unique" role="button">Start</a>
                                     </div>
                                     </a>
                                 </div>
@@ -177,7 +177,7 @@
                                     <br>
                                     <p>
                                         Long range (LoRa) is an wireless RF technology which has an ability for sending amount of data in long communication range. 
-                                        Dhandhanggula network have enhanced LoRa ability to keep going well in high density area by using mesh network topology. 
+                                        Kawung network have enhanced LoRa ability to keep going well in high density area by using mesh network topology. 
                                     </p>
                                     </div>
                                     <div class="col-lg-7" style="text-align:center">
@@ -198,10 +198,10 @@
                                         <img src="./assets/img/02.jpg" style="height:400px; width:100%; object-fit:contain; text-align:center">
                                     </div>
                                     <div class="col-lg-5">
-                                    <h3><b>Dhandhanggula network is an open network and empowered by community</b></h3>
+                                    <h3><b>Kawung network is an open network and empowered by community</b></h3>
                                     <br>
                                     <p>
-                                        New node can join easily to an existing dhandhanggula network in a area. 
+                                        New node can join easily to an existing kawung network in a area. 
                                         With new node join, it increase the network coverage. 
                                         The network is fully maintained by the community in the area.
                                     </p>
@@ -221,7 +221,7 @@
                                     <h3><b>Your data is secured by end-to-end encryption</b></h3>
                                     <br>
                                     <p>
-                                        Dhandhanggula network using AES encryption to make sure every data passing through the network is secure.
+                                        Kawung network using AES encryption to make sure every data passing through the network is secure.
                                         We also working in another encryption algorithm to work in microcontroller ecosystem. 
                                     </p>
                                     </div>
@@ -244,7 +244,7 @@
             <div class="container" style="align-center">
                 <div class="row" style="text-align:center;">
                     <div class="col">
-                        <p class="text-white" style="font-size:10px"><Strong>Dhandhanggula Network @2022</Strong>
+                        <p class="text-white" style="font-size:10px"><Strong>Kawung Network @2022</Strong>
                         Illustration by <a href="https://www.freepik.com/author/stories">storyset</a></p>
                     </div>
                 </div>
