--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <title>Kawung Network</title>
-        <link rel="icon" href="./assets/img/logo.png">
+        <link rel="icon" href="./assets/img/logo-2.png">
         <meta content="Official Website of Kawung Network - an open source organization for IoT network and security" name="description">
         <meta content="kawung, network, iot, security, lora, arduino, raspberry" name="keywords">
 
@@ -26,12 +26,12 @@
 
     <body>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-md navbar-light p-1 fixed-top primebackground">
+        <nav class="navbar navbar-expand-md navbar-light p-1 primebackground shadow-sm p-3 mb-5 bg-body rounded">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#home" >
                     <div class="row">
                         <div class="col" style="text-align:center">
-                            <img src="./assets/img/logo.png" alt="" width="auto" height="50" class="d-inline-block align-text-top">
+                            <img src="./assets/img/logo.png" alt="" width="auto" height="40" class="d-inline-block align-text-top">
                         </div>
                     </div>
                 </a>
@@ -52,6 +52,9 @@
                             <a class="nav-link" href="#software" style="color:#a0a0a0"><Strong>Software</Strong></a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#software" style="color:#a0a0a0"><Strong>Ecosystem</Strong></a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#documentation" style="color:#a0a0a0"><Strong>Documentation</Strong></a>
                         </li>
 
@@ -61,35 +64,46 @@
         </nav>
 
         <!-- intro -->
-        <section id="home" class="d-flex flex-column justify-content-center" style="padding-bottom:0px; padding-top:0px">
+        <section id="home" class="d-flex flex-column justify-content-center" style="padding-bottom:0px; padding-top:30px">
             <div class="container" style="">
-                <div class="row" style="margin-bottom:20px">
-                    <div class="col position-relative" style="height:100vh;">
-                        <div class="card no-border position-absolute top-50 start-50 translate-middle" style="width:100%">
+                <div class="row" style="padding-bottom:50px;">
+                    <div class="col">
+                        <div class="card no-border">
                             <div class="card-body">
                                 <div class="row">
-                                    <div>
-                                        <h1>
-                                            <span class="text-prime">Open Source </span>
-                                            <span>LoRa Mesh Network for </span>
-                                            <span class="text-prime">Community</span>
-                                        </h1>
+                                    <div class="col-lg-6">
+                                        <div class="card no-border">
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div>
+                                                        <h1 style="text-align:left">
+                                                            <span class="text-prime">Open Source </span>
+                                                            <span>LoRa Mesh Network for </span>
+                                                            <span class="text-prime">Community</span>
+                                                        </h1>
+                                                    </div>
+                                                    <h4 style="padding-top:30px; text-align:left">
+                                                        Kawung network is an open source LoRa mesh network which provide secure connection
+                                                        and ease of use.
+                                                    </h4>
+                                                </div>
+                                                <div class="row" style="padding-bottom:30px; padding-top:30px; text-align:left">
+                                                    <div class="col" style="text-align:left">
+                                                        <a class="btn btn-danger prime-btn" href="#product" role="button">Get Started</a>
+                                                        <a class="btn btn-danger secondary-btn" href="#documentation" role="button" style="margin-left:20px;">Documentation</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <h4 style="padding-top:30px">
-                                        Kawung network is an open source long range (LoRa) mesh network with secure connection.
-                                        We provide an easy to use connection between new node and existing mesh network.
-                                    </h4>
-                                </div>
-                                <div class="row" style="padding-bottom:30px; padding-top:30px">
-                                    <div class="col" style="text-align:center">
-                                        <a class="btn btn-danger prime-btn" href="#product" role="button">Get Started</a>
-                                        <a class="btn btn-danger secondary-btn" href="#documentation" role="button" style="margin-left:20px;">Documentation</a>
+                                    <div class="col-lg-6" style="text-align:center">
+                                        <img src="./assets/img/hero.png" style="height:100%;  width:100%; object-fit:contain; text-align:center">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> 
             </div>
         </section>
 
@@ -221,8 +235,8 @@
                                     <h3><b>Your data is secured by end-to-end encryption</b></h3>
                                     <br>
                                     <p>
-                                        Kawung network using AES encryption to make sure every data passing through the network is secure.
-                                        We also working in another encryption algorithm to work in microcontroller ecosystem. 
+                                        Kawung network use end-to-end encryption to make sure every data passing through the network is secured and 
+                                        can't read by other non-permissible node in public mesh network.
                                     </p>
                                     </div>
                                     <div class="col-lg-7" style="text-align:center">
@@ -240,12 +254,27 @@
 
 
         <!-- Footer -->
-        <section id="end-section" class="d-flex flex-column justify-content-center" style="padding-top: 20px; padding-bottom:10px; background:#141414">
+        <section id="end-section" class="d-flex flex-column justify-content-center" style="padding-top: 30px; padding-bottom:10px; background:#141414">
             <div class="container" style="align-center">
-                <div class="row" style="text-align:center;">
-                    <div class="col">
+                <div class="row" style="text-align:left;">
+                    <div class="col-md-6">
+                        <img src="./assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
+                        <p class="text-white" style="font-size:12px; max-width:400px">Kawung Network is an open soure LoRa mesh network which provide secure connection and ease of use.
+                        <br>
                         <p class="text-white" style="font-size:10px"><Strong>Kawung Network @2022</Strong>
                         Illustration by <a href="https://www.freepik.com/author/stories">storyset</a></p>
+                    </div>
+                    <div class="col-md-2">
+                        <p style="color:#ffffff"><Strong>About</Strong></p>
+
+                    </div>
+                    <div class="col-md-2">
+                        <p style="color:#ffffff"><strong>Product</strong></p>
+                        <p>Kawung Node</p>
+                        <p>Kawung Gateway</p>
+                    </div>
+                    <div class="col-md-2">
+                        <p style="color:#ffffff"><strong>Ecosystem</strong></p>
                     </div>
                 </div>
             </div>
