--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6" style="text-align:center">
-                                        <img src="./assets/img/node_hero_2.png" style="height:100%;  width:100%; object-fit:contain; text-align:center">
+                                        <img src="./assets/img/node_hero_2.png" style="height:600px;  width:auto; object-fit:contain; text-align:center">
                                     </div>
                                 </div>
                             </div>
