--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <title>Kawung Network</title>
         <link rel="icon" href="./assets/img/logo-2.png">
-        <meta content="Official Website of Kawung Network - an open source organization for IoT network and security" name="description">
+        <meta content="Official Website of Kawung Network - an organization for IoT network and security" name="description">
         <meta content="kawung, network, iot, security, lora, arduino, raspberry" name="keywords">
 
         <!-- CSS -->
@@ -77,13 +77,13 @@
                                                 <div class="row">
                                                     <div>
                                                         <h1 style="text-align:left">
-                                                            <span class="text-prime">Open Source </span>
+                                                            <span class="text-prime">An open </span>
                                                             <span>LoRa Mesh Network for </span>
                                                             <span class="text-prime">Community</span>
                                                         </h1>
                                                     </div>
                                                     <h4 style="padding-top:30px; text-align:left">
-                                                        Kawung network is an open source LoRa mesh network which provide secure connection
+                                                        Kawung network provide public LoRa mesh network with secure connection
                                                         and ease of use.
                                                     </h4>
                                                 </div>
@@ -259,7 +259,7 @@
                 <div class="row" style="text-align:left;">
                     <div class="col-md-6">
                         <img src="./assets/img/logo.png" style="height:50px; padding-bottom:20px"></img>
-                        <p class="text-white" style="font-size:12px; max-width:400px">Kawung Network is an open soure LoRa mesh network which provide secure connection and ease of use.
+                        <p class="text-white" style="font-size:12px; max-width:400px">Kawung Network is an public LoRa mesh network which provide secure connection and ease of use.
                         <br>
                         <p class="text-white" style="font-size:10px"><Strong>Kawung Network @2022</Strong>
                         Illustration by <a href="https://www.freepik.com/author/stories">storyset</a></p>
